update booking form component

--- a/src/app/desk-booking/booking-form/booking-form.component.html
+++ b/src/app/desk-booking/booking-form/booking-form.component.html
@@ -1,1 +1,5 @@
-<p>booking-form works!</p>
+<app-booking-form [formGroup]="bookingForm">
+  <app-time-picker></app-time-picker>
+  <app-dropdown></app-dropdown>
+  <app-desk-dropdown></app-desk-dropdown>
+</app-booking-form>
