--- a/src/app/desk-booking/date-time-picker/date-time-picker.component.html
+++ b/src/app/desk-booking/date-time-picker/date-time-picker.component.html
@@ -1,83 +1,4 @@
-<!-- <form [formGroup]="dateTimeForm" (ngSubmit)="(getStartDate)">
-  <alert type="success">
-    <input
-      type="text"
-      class="form-control"
-      [popover]="popTemplate"
-      placement="bottom"
-      [outsideClick]="true"
-      #popoverRef="bs-popover"
-      value="{{ dateTime }}"
-      (click)="showDate(); dropdown = false"
-    />
-  </alert>
-  <hr />
-  <ng-template #popTemplate>
-    <div>
-      <input
-        id="startDate"
-        type="text"
-        placeholder="Pick a date"
-        class="form-control"
-        [(ngModel)]="date"
-        [hidden]="!isDateVisible"
-        (ngModelChange)="updateDate()"
-        (selectionDone)="dateSelectionDone()"
-        bsDatepicker
-        [bsConfig]="{ isAnimated: true }"
-      />
-    </div>
-    <timepicker
-      [hidden]="isDateVisible"
-      [(ngModel)]="time"
-      (ngModelChange)="updateTime()"
-      [showMeridian]="isMeridian"
-      [showMinutes]="false"
-    >
-    </timepicker>
-    <div style="padding: 5px">
-      <button
-        type="button"
-        class="btn btn-warning btn-sm btn-info"
-        [hidden]="!isDateVisible"
-        (click)="today()"
-      >
-        Today
-      </button>
-      <button
-        type="button"
-        class="btn btn-warning btn-sm btn-info"
-        [hidden]="isDateVisible"
-        (click)="now()"
-      >
-        Now
-      </button>
-      <span class="btn-group pull-right">
-        <button
-          type="button"
-          class="btn btn-sm btn-info"
-          [hidden]="isDateVisible"
-          (click)="showDate()"
-        >
-          Date
-        </button>
-        <button
-          type="button"
-          class="btn btn-sm btn-info"
-          [hidden]="!isDateVisible"
-          (click)="showTime()"
-        >
-          Time
-        </button>
-        <button type="submit" class="btn btn-sm btn-danger" (click)="close()">
-          OK
-        </button>
-      </span>
-      <span class="clearfix"></span>
-    </div>
-  </ng-template>
-</form> -->
-<form [formGroup]="dateTimeForm" (ngSubmit)="getReservationDate()">
+<form [formGroup]="dateTimeForm" (ngSubmit)="selectReservationDate()">
   <label for="meeting-time">Choose a time for your appointment:</label><br />
   <div class="d-flex justify-content-center">
     <input
@@ -85,14 +6,18 @@
       id="meeting-time"
       name="meeting-time"
       formControlName="startDate"
-      min="2022-04-21T09:00"
+      min="09:00:00"
+      max="17:00:00"
+      step="3600"
     />
     <input
       type="datetime-local"
       id="meeting-time"
       name="meeting-time"
       formControlName="endDate"
-      min="2022-04-21T17:00"
+      min="09:00:00"
+      max="17:00:00"
+      step="3600"
     />
   </div>
   <button type="submit" class="btn btn-sm btn-danger">OK</button>
