--- a/src/app/desk-booking/booking-form/booking-form.component.html
+++ b/src/app/desk-booking/booking-form/booking-form.component.html
@@ -1,4 +1,6 @@
 <p>WORKING</p>
-<app-time-picker></app-time-picker>
-<app-dropdown></app-dropdown>
-<app-desk-dropdown></app-desk-dropdown>
+<app-time-picker></app-time-picker><br />
+<app-dropdown></app-dropdown><br />
+<ng-container>
+  <app-desk-dropdown></app-desk-dropdown>
+</ng-container>
