--- a/src/app/desk-booking/date-time-picker/date-time-picker.component.html
+++ b/src/app/desk-booking/date-time-picker/date-time-picker.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="dateTimeForm" (ngSubmit)="selectReservationDate()">
   <label for="meeting-time">Choose a time for your appointment:</label><br />
-  <div class="d-flex justify-content-center">
+  <div>
     <input
       type="datetime-local"
       id="meeting-time"
