--- a/src/app/desk-booking/date-time-picker/date-time-picker.component.html
+++ b/src/app/desk-booking/date-time-picker/date-time-picker.component.html
@@ -20,5 +20,5 @@
       step="3600"
     />
   </div>
-  <button type="submit" class="btn btn-sm btn-danger">OK</button>
+  <button type="submit" class="btn btn-sm btn-danger">Confirm date</button>
 </form>
