--- a/src/app/desk-booking/room-dropdown/room-dropdown.component.html
+++ b/src/app/desk-booking/room-dropdown/room-dropdown.component.html
@@ -3,6 +3,7 @@
     <label>Select a room: </label>
     <div class="col">
       <select (change)="selectRoomChangeHandler($event)">
+        <option disabled selected value>-- select a room --</option>
         <option value="1">Room 1</option>
         <option value="2">Room 2</option>
       </select>
