wip getting desks

--- a/src/app/desk-booking/desk-dropdown/desk-dropdown.component.html
+++ b/src/app/desk-booking/desk-dropdown/desk-dropdown.component.html
@@ -1,1 +1,4 @@
-<p>cia yra desk dropdownas</p>
+<select (change)="selectDeskChangeHandler($event)">
+  <option disabled selected value>-- select a desk --</option>
+  <option>{{ data }}</option>
+</select>
