--- a/src/app/desk-booking/booking-form/booking-form.component.html
+++ b/src/app/desk-booking/booking-form/booking-form.component.html
@@ -1,9 +1,18 @@
-<form [formGroup]="bookingForm">
+<form [formGroup]="bookingForm" (ngSubmit)="createBooking()">
   <p>WORKING</p>
-  <app-time-picker></app-time-picker><br />
+  <app-time-picker (redirect)="parentData = $event"></app-time-picker><br />
   <app-dropdown (change)="toggleShow()"></app-dropdown><br />
   <ng-container *ngIf="isShown">
-    <app-desk-dropdown></app-desk-dropdown>
+    <ng-container>
+      <app-desk-dropdown [data]="parentData"></app-desk-dropdown>
+    </ng-container>
   </ng-container>
-  <button type="Book" class="btn btn-sm btn-success">Confirm booking</button>
+  <br />
+  <button
+    type="submit"
+    class="btn btn-sm btn-success"
+    [disabled]="bookingForm.invalid"
+  >
+    Confirm booking
+  </button>
 </form>
