--- a/src/app/desk-booking/desk-dropdown/desk-dropdown.component.html
+++ b/src/app/desk-booking/desk-dropdown/desk-dropdown.component.html
@@ -1,4 +1,6 @@
 <select (change)="selectDeskChangeHandler($event)">
   <option disabled selected value>-- select a desk --</option>
-  <option>{{ data }}</option>
+  <option *ngFor="let desk of desks" [value]="desk.deskId">
+    {{ desk.deskName }}
+  </option>
 </select>
