--- a/src/app/desk-booking/date-time-picker/date-time-picker.component.html
+++ b/src/app/desk-booking/date-time-picker/date-time-picker.component.html
@@ -2,7 +2,7 @@
   <label for="meeting-time">Select date and time for your reservation:</label
   ><br />
   <div>
-    <!-- <input
+    <input
       type="date"
       id="meeting-time"
       name="meeting-time"
@@ -18,25 +18,7 @@
       step="3600"
     />
     <input
-      type="datetime-local"
-      id="meeting-time"
-      name="meeting-time"
-      formControlName="endTime"
-      min="09:00:00"
-      max="17:00:00"
-      step="3600"
-    /> -->
-    <input
-      type="datetime-local"
-      id="meeting-time"
-      name="meeting-time"
-      formControlName="startDate"
-      min="09:00:00"
-      max="17:00:00"
-      step="3600"
-    />
-    <input
-      type="datetime-local"
+      type="time"
       id="meeting-time"
       name="meeting-time"
       formControlName="endTime"
