--- a/src/app/desk-booking/booking-form/booking-form.component.html
+++ b/src/app/desk-booking/booking-form/booking-form.component.html
@@ -1,22 +1,22 @@
 <form [formGroup]="bookingForm" (ngSubmit)="createBooking()">
   <app-time-picker (redirectDesks)="deskData = $event"></app-time-picker><br />
 
-  <div id="comp-render" *ngIf="roomDropdown">
+  <ng-container *ngIf="roomDropdown">
     <app-room-dropdown
       (change)="toggleShow()"
       (redirectRoom)="roomData = $event"
     ></app-room-dropdown>
-  </div>
+</ng-container>
 
   <br />
   <ng-container>
     <ng-container *ngIf="isShown">
-      <app-desk-dropdown
-        [desks]="deskData"
-        [roomOpt]="roomData"
-      ></app-desk-dropdown>
+        <app-desk-dropdown
+          [desks]="deskData"
+          [roomOpt]="roomData"
+        ></app-desk-dropdown>
+      </ng-container>
     </ng-container>
-  </ng-container>
   <br />
   <button
     type="submit"
