--- a/src/app/desk-booking/booking-form/booking-form.component.html
+++ b/src/app/desk-booking/booking-form/booking-form.component.html
@@ -25,4 +25,12 @@
   >
     Confirm booking
   </button>
+
+  <button
+  type="button"
+  class="btn btn-sm btn-outline-dark m-2"
+  [routerLink]="['/overview']"
+>
+  Cancel
+</button>
 </form>
