--- a/src/app/desk-booking/date-time-picker/date-time-picker.component.html
+++ b/src/app/desk-booking/date-time-picker/date-time-picker.component.html
@@ -25,8 +25,5 @@
     />
   </div>
   <br />
-  <button type="submit" class="btn btn-sm btn-danger"  (click)="roomDropdown=true">Confirm date</button>
+  <button type="submit" class="btn btn-sm btn-danger">Confirm date</button>
 </form>
-<div *ngIf="roomDropdown">
-<app-room-dropdown></app-room-dropdown>
-</div>
