Show text when there is no reservations

--- a/src/app/desk-booking-list/desk-booking-list.component.html
+++ b/src/app/desk-booking-list/desk-booking-list.component.html
@@ -1,4 +1,8 @@
-<h3>Reservations</h3>
+<div *ngIf="!isLoading">
+  <div *ngIf="!isEmpty">
+    <h3>Reservations</h3>
+  </div>
+</div>
 
 <div class="d-flex center-content" *ngIf="isLoading">
   <div class="spinner-border" role="status">
