Show text when there is no reservations

--- a/src/app/desk-booking-list/desk-booking-list.component.html
+++ b/src/app/desk-booking-list/desk-booking-list.component.html
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div *ngIf="isEmpty">
-    <h5>There is no active reservations</h5>
+    <h5>There are no active reservations</h5>
   </div>
 </div>
 
