--- a/src/app/desk-booking/date-time-picker/date-time-picker.component.html
+++ b/src/app/desk-booking/date-time-picker/date-time-picker.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="dateTimeForm" (ngSubmit)="selectReservationDate()">
+<div [formGroup]="dateTimeForm" (ngSubmit)="selectReservationDate()">
   <label for="meeting-time">Select date and time for desk reservation:</label
   ><br />
   <div>
@@ -26,4 +26,4 @@
   </div>
   <br />
   <button type="submit" class="btn btn-sm btn-danger">Confirm date</button>
-</form>
+</div>
