--- a/src/app/desk-booking/booking-form/booking-form.component.html
+++ b/src/app/desk-booking/booking-form/booking-form.component.html
@@ -8,7 +8,7 @@
   ><br />
 
   <app-room-dropdown
-    formControlName="roomDropdown"
+    formControlName="roomId"
     (change)="toggleShow()"
     (redirectRoom)="roomData = $event"
   ></app-room-dropdown
@@ -18,7 +18,7 @@
   <ng-container>
     <ng-container *ngIf="isShown">
       <app-desk-dropdown
-        formControlName="deskDropdown"
+        formControlName="deskId"
         [desks]="deskData"
         [roomOpt]="roomData"
       ></app-desk-dropdown>
