--- a/src/app/desk-booking/desk-dropdown/desk-dropdown.component.html
+++ b/src/app/desk-booking/desk-dropdown/desk-dropdown.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="deskDropdownForm">
+<div [formGroup]="bookingForm">
 <select (change)="selectDeskChangeHandler($event)" formControlName="deskId">
     <option disabled selected value>-- select a desk --</option>
     <option *ngFor="let desk of filteredDesks" [value]="desk.deskId">
