--- a/src/app/desk-booking-list/desk-booking-list.component.html
+++ b/src/app/desk-booking-list/desk-booking-list.component.html
@@ -28,7 +28,7 @@
         </div>
         <div class="flex-child center-content margin-right-5">
           <p class="fw-bold card-detail w-fit"
-             style="font-size: 14px; margin-top: 17px;"> {{ reservation.deskId }}</p>
+             style="font-size: 14px; margin-top: 17px;"> {{ reservation.deskName.substring(5, 6) }}</p>
         </div>
       </div>
       <div class="grid-container align-items-center">
