--- a/src/app/desk-booking/date-time-picker/date-time-picker.component.html
+++ b/src/app/desk-booking/date-time-picker/date-time-picker.component.html
@@ -1,5 +1,5 @@
-<div [formGroup]="dateTimeForm" >
-  <label for="meeting-time">Select date and time for desk reservation:</label
+<form [formGroup]="dateTimeForm" (ngSubmit)="selectReservationDate()">
+  <label for="meeting-time">Select date and time for your reservation:</label
   ><br />
   <div>
     <input
@@ -25,5 +25,5 @@
     />
   </div>
   <br />
-  <button type="button" class="btn btn-sm btn-danger" (click)="selectReservationDate()">Confirm date</button>
-</div>
+  <button type="submit" class="btn btn-sm btn-danger">Confirm date</button>
+</form>
