--- a/src/app/desk-booking/date-time-picker/date-time-picker.component.html
+++ b/src/app/desk-booking/date-time-picker/date-time-picker.component.html
@@ -29,7 +29,7 @@
     type="button"
     class="btn btn-sm btn-danger"
     [disabled]="dateTimeForm.invalid"
-    (click)="selectReservationDate(); showRoomDropdown()"
+    (click)="selectReservationDate()"
   >
     Confirm date
   </button>
