--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <footer
-    class="footer  text-center d-flex py-2 border-top justify-content-around"
+    class="footer text-center d-flex py-2 border-top justify-content-around fixed-bottom"
   >
-    <span class="text-muted">&copy; Swedbank IT Academy </span>
-    <span class="text-muted">Team 4 </span>
-    <span class="text-muted">2022</span>
+    <div class="text-muted">&copy; Team 4</div>
+    <div class="text-muted">2022</div>
+    <div class="text-muted">Vilnius</div>
   </footer>
 </div>
