--- a/src/app/desk-booking/booking-form/booking-form.component.html
+++ b/src/app/desk-booking/booking-form/booking-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="bookingForm" (ngSubmit)="createBooking()">
+<form [formGroup]="bookingForm" *ngIf="(reservationsList$ | async) as reservations">
   <app-time-picker
     [bookingForm]="bookingForm"
     (redirectDesks)="deskData = $event"
@@ -21,15 +21,33 @@
       ></app-desk-dropdown>
     </ng-container>
   <br />
-
-  <button
-    type="submit"
-    class="btn btn-sm btn-success"
-    [disabled]="bookingForm.invalid"
-  >
-    Confirm booking
-  </button>
-
+<div>
+  <div *ngIf="reservations.length < 3">
+    <button
+      type="submit"
+      class="btn btn-sm btn-success"
+      [disabled]="bookingForm.invalid"
+      (click)="createBooking()"
+    >
+      Confirm booking
+    </button>
+    <button
+      type="button"
+      class="btn btn-sm btn-outline-dark m-2"
+      [routerLink]="['/overview']"
+    >
+      Cancel
+    </button>
+  </div>
+  <div *ngIf="reservations.length >= 3">
+    <button
+      type="none"
+      class="btn btn-sm btn-success"
+      [disabled]="bookingForm.invalid"
+      (click)="open(content)"
+    >
+      Confirm booking
+    </button>
   <button
     type="button"
     class="btn btn-sm btn-outline-dark m-2"
@@ -37,4 +55,21 @@
   >
     Cancel
   </button>
+</div>
+</div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Error</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <p>You have too many reservations, maximum is 3. Please cancel one before booking.</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Go to cancellation')" [routerLink]="['/cancellation']">Go to cancellation</button>
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Close')">Close</button>
+  </div>
+</ng-template>
 </form>
+
