--- a/src/app/desk-booking/booking-form/booking-form.component.html
+++ b/src/app/desk-booking/booking-form/booking-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="bookingForm" *ngIf="(reservationsList$ | async) as reservations">
+<form [formGroup]="bookingForm">
   <app-time-picker
     [bookingForm]="bookingForm"
     (redirectDesks)="deskData = $event"
@@ -21,43 +21,47 @@
       ></app-desk-dropdown>
     </ng-container>
   <br />
-<div>
-  <div *ngIf="reservations.length < 3">
-    <button
-      type="submit"
-      class="btn btn-sm btn-success"
-      [disabled]="bookingForm.invalid"
-      (click)="createBooking()"
-    >
-      Confirm booking
-    </button>
-    <button
-      type="button"
-      class="btn btn-sm btn-outline-dark m-2"
-      [routerLink]="['/overview']"
-    >
-      Cancel
-    </button>
+  <div>
+    <div *ngIf="(reservationsList$ | async) as reservations">
+      <div *ngIf="reservations.length < 3">
+        <button
+          type="submit"
+          class="btn btn-sm btn-success"
+          [disabled]="bookingForm.invalid"
+          (click)="createBooking()"
+        >
+          Confirm booking
+        </button>
+        <button
+          type="button"
+          class="btn btn-sm btn-outline-dark m-2"
+          [routerLink]="['/overview']"
+        >
+          Cancel
+        </button>
+      </div>
+        <div>
+          <div *ngIf="reservations.length >= 3">
+            <button
+              type="none"
+              class="btn btn-sm btn-success"
+              [disabled]="bookingForm.invalid"
+              (click)="open(content)"
+            >
+              Confirm booking
+            </button>
+          <button
+            type="button"
+            class="btn btn-sm btn-outline-dark m-2"
+            [routerLink]="['/overview']"
+          >
+            Cancel
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
-  <div *ngIf="reservations.length >= 3">
-    <button
-      type="none"
-      class="btn btn-sm btn-success"
-      [disabled]="bookingForm.invalid"
-      (click)="open(content)"
-    >
-      Confirm booking
-    </button>
-  <button
-    type="button"
-    class="btn btn-sm btn-outline-dark m-2"
-    [routerLink]="['/overview']"
-  >
-    Cancel
-  </button>
-</div>
-</div>
-
+</form>
 <ng-template #content let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Error</h4>
@@ -71,5 +75,4 @@
     <button type="button" class="btn btn-outline-dark" (click)="modal.close('Close')">Close</button>
   </div>
 </ng-template>
-</form>
 
