--- a/src/app/desk-booking/date-time-picker/date-time-picker.component.html
+++ b/src/app/desk-booking/date-time-picker/date-time-picker.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="dateTimeForm">
   <label for="meeting-time">Select date and time for desk reservation:</label
-  ><br />
+  ><br /><br />
   <div>
     <input
       type="date"
@@ -30,7 +30,11 @@
     class="btn btn-sm btn-danger"
     [disabled]="dateTimeForm.invalid"
     (click)="selectReservationDate()"
+    (click)="showMessage()"
   >
     Confirm date
   </button>
+  <ng-container *ngIf="isShown">
+    <p>Your date has been confirmed!</p>
+  </ng-container>
 </div>
