--- a/src/app/desk-booking/desk-dropdown/desk-dropdown.component.html
+++ b/src/app/desk-booking/desk-dropdown/desk-dropdown.component.html
@@ -1,9 +1,12 @@
-<div [formGroup]="bookingForm">
-<select (change)="selectDeskChangeHandler($event)" formControlName="deskId">
-    <option disabled selected value>-- select a desk --</option>
+<div [formGroup]="bookingForm" class="col-sm-5">
+  <select
+    (change)="selectDeskChangeHandler($event)"
+    formControlName="deskId"
+    class="form-control"
+  >
+    <option disabled selected value>-- select desk --</option>
     <option *ngFor="let desk of filteredDesks" [value]="desk.deskId">
       {{ desk.deskName }}
     </option>
   </select>
 </div>
-
