--- a/src/app/desk-booking/room-dropdown/room-dropdown.component.html
+++ b/src/app/desk-booking/room-dropdown/room-dropdown.component.html
@@ -1,18 +1,18 @@
 <div [formGroup]="roomDropdownForm">
-<div class="row">
-  <div class="col">
-    <label>Select a room: </label>
+  <div class="row">
     <div class="col">
-      <select (change)="selectRoomChangeHandler($event)" formControlName="roomId">
-        <option disabled selected value>-- select a room --</option>
-        <option value="1">Room 1</option>
-        <option value="2">Room 2</option>
-      </select>
+      <label>Select a room: </label>
+      <div class="col-sm-4">
+        <select
+          (change)="selectRoomChangeHandler($event)"
+          formControlName="roomId"
+          class="form-control"
+        >
+          <option disabled selected value>-- select a room --</option>
+          <option value="1">Room 1</option>
+          <option value="2">Room 2</option>
+        </select>
+      </div>
     </div>
   </div>
 </div>
-</div>
-
-
-
-
