--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <footer
-    class="footer text-center d-flex py-2 border-top justify-content-around fixed-bottom"
+    class="footer text-center d-flex py-2 border-top justify-content-around"
   >
     <div class="text-muted">&copy; Team 4</div>
     <div class="text-muted">2022</div>
